RESOLVED FIXED215598
REGRESSION (Async overflow scrolling): No rubberbanding in overflow:scroll in the wheel event region
https://bugs.webkit.org/show_bug.cgi?id=215598
Summary REGRESSION (Async overflow scrolling): No rubberbanding in overflow:scroll in...
Simon Fraser (smfr)
Reported 2020-08-17 17:48:18 PDT
REGRESSION (Async overflow scrolling): No rubberbanding in overflow:scroll in the wheel event region
Attachments
Patch (15.50 KB, patch)
2020-08-17 17:49 PDT, Simon Fraser (smfr)
no flags
Patch (16.34 KB, patch)
2020-08-17 21:21 PDT, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-08-17 17:49:31 PDT
Simon Fraser (smfr)
Comment 2 2020-08-17 17:49:34 PDT
Simon Fraser (smfr)
Comment 3 2020-08-17 21:21:34 PDT
EWS
Comment 4 2020-08-18 09:36:41 PDT
Committed r265820: <https://trac.webkit.org/changeset/265820> All reviewed patches have been landed. Closing bug and clearing flags on attachment 406766 [details].
Note You need to log in before you can comment on or make changes to this bug.