REGRESSION (Async overflow scrolling): No rubberbanding in overflow:scroll in the wheel event region https://bugs.webkit.org/show_bug.cgi?id=215598 <rdar://problem/64895442>

Reviewed by Darin Adler.
Source/WebCore:

Scrolling in overflow:scroll inside the non-fast event region (e.g. inside an ancestor with a wheel event
handler) happens via ScrollAnimatorMac::handleWheelEvent() which calls ScrollableArea::setScrollOffsetFromAnimation()
which bounces to the scrolling thread via RenderLayer::requestScrollPositionUpdate(). We were clamping the
scroll offset here, thus disallowing the overscrolled offsets required for rubberbanding.

Fix is to allow clamping for user scrolls. Also add more logging.

Test: fast/scrolling/mac/rubberband-overflow-in-wheel-region.html

* dom/Element.cpp:
(WebCore::Element::dispatchWheelEvent):
* page/scrolling/mac/ScrollingCoordinatorMac.mm:
(WebCore::ScrollingCoordinatorMac::handleWheelEvent):
* platform/ScrollableArea.cpp:
(WebCore::ScrollableArea::handleWheelEvent):
(WebCore::ScrollableArea::setScrollOffsetFromAnimation):

LayoutTests:

Remove an unneeded `var successfullyParsed = true` in existing tests.

New test that detect rubberbanding.

* fast/scrolling/mac/async-scroll-overflow-hidden-on-one-axis.html:
* fast/scrolling/mac/async-scroll-overflow-rtl.html:
* fast/scrolling/mac/async-scroll-overflow-top-inset.html:
* fast/scrolling/mac/async-scroll-overflow.html:
* fast/scrolling/mac/hit-test-overflow-tiled-layer.html:
* fast/scrolling/mac/move-node-in-overflow-scroll.html:
* fast/scrolling/mac/overflow-scrolled-document.html:
* fast/scrolling/mac/overflow-zoomed-document.html:
* fast/scrolling/mac/overlapped-overflow-scroll.html:
* fast/scrolling/mac/rubberband-overflow-in-wheel-region-expected.txt: Added.
* fast/scrolling/mac/rubberband-overflow-in-wheel-region.html: Copied from LayoutTests/fast/scrolling/mac/overflow-scrolled-document.html.


Canonical link: https://commits.webkit.org/228370@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@265820 268f45cc-cd09-0410-ab3c-d52691b4dbfc